# aiaa

./: .gitignore  README.md
aiaa/demo/1.民法法官/: 0-helloworld.py  1-民法法官.py  1-空代理.py  2-民法法官.py  chatsession.py
aiaa/demo/2.翻译ipynb文档/: README.md  translate.py
aiaa/demo/3.cuda体验/: build.sh  test.cc  vec.cu  vec.h
aiaa/demo/4.用cuda实现bp网络/: CMakeLists.txt
aiaa/demo/4.用cuda实现bp网络/demo/: test1.cc
aiaa/demo/4.用cuda实现bp网络/include/cudabp/: config.h.in
aiaa/demo/4.用cuda实现bp网络/include/lyramilk/tensor/: memory.h  vector.h
aiaa/demo/4.用cuda实现bp网络/src/: memory.cu  vector.cu
aiaa/demo/4.矩阵分解/: README.md
aiaa/demo/8.transformer_python/: matrixmultily.py  model.py  predict.py  readme.md  testnn.py  testtransformer.py  testtransformer2.py  testtransformer_ds3.py
aiaa/demo/8.transformer_python/bak/: encoding.py  transformer.py
aiaa/demo/deeptransformer/: testtransformer_ds3.py
aiaa/demo/test/: test_tools.py
aiaa/free/: check_https.py
aiaa/free/8.transformer_python/: mpl1.py  readme.md  testtransformer2.py  testtransformer_ds3.py
aiaa/free/8.transformer_python/bak/: README.md  inference.py  test.py  train.py
aiaa/free/deeptransformer/: README.md  kernel.py  testtransformer_ds3.py  tutu.py
aiaa/free/mytransformers/: lora.py  rope.py
aiaa/include/: const.py
aiaa/include/ai/: chatsession.py
aiaa/include/util/: aiorequests.py
